sandbox/output
StringCalculator.java:14: error: cannot find symbol
        System.out.println(inputs.size());
                                 ^
  symbol:   method size()
  location: variable inputs of type String[]
1 error
